Fixup version changeroo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,9 +116,9 @@ SET(OPENMM_AUTHORS "Peter.Eastman")
 
 # TODO: Change this to configure_file.
 ADD_DEFINITIONS(-DOPENMM_LIBRARY_NAME=${OPENMM_LIBRARY_NAME}
-                -DOPENMM_MAJOR_VERSION=${OPENMM_VERSION_MAJOR}
-                -DOPENMM_MINOR_VERSION=${OPENMM_VERSION_MINOR}
-                -DOPENMM_BUILD_VERSION=${OPENMM_VERSION_PATCH})
+                -DOPENMM_MAJOR_VERSION=${OpenMM_VERSION_MAJOR}
+                -DOPENMM_MINOR_VERSION=${OpenMM_VERSION_MINOR}
+                -DOPENMM_BUILD_VERSION=${OpenMM_VERSION_PATCH})
 
 
 ADD_DEFINITIONS(-DOPENMM_COPYRIGHT_YEARS="${OPENMM_COPYRIGHT_YEARS}"
