Make export for csha1

--- a/libraries/csha1/CMakeLists.txt
+++ b/libraries/csha1/CMakeLists.txt
@@ -3,12 +3,16 @@ project(csha1
         VERSION 2.1
         LANGUAGES CXX)
 
+include(GenerateExportHeader)
 add_library(csha1 src/SHA1.cpp)
+generate_export_header(csha1)
 
 target_include_directories(csha1
         PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:include>
+        PRIVATE
+        ${CMAKE_CURRENT_BINARY_DIR}
         )
 
 install(TARGETS csha1 EXPORT csha1Config
